feat: Limpiar y obtener estadisticas numericas de los datos

--- a/main.ipynb
+++ b/main.ipynb
@@ -528,7 +528,7 @@
    "metadata": {},
    "source": [
     "#### Analisis de la DataFrame\n",
-    "Luego de la conversion se noto igualmente en la DataFrame datos vacios."
+    "Luego de la conversion, volvemos a analisas nuesta DataFrame para contemplar los cambios hechos."
    ]
   },
   {
@@ -638,7 +638,425 @@
    "cell_type": "markdown",
    "id": "8c4b40f9",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Normalizacion de la columna Asistencia\n",
+    "Limpieza de la columna y conversion de tipo texto a entero para facilitar luego los calculos estadisticos y graficos, tambien se aseguro que el rango maximo valido sea de 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b4785fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\%'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\%'\n",
+      "C:\\Users\\IPF-2025\\AppData\\Local\\Temp\\ipykernel_19172\\4268332747.py:1: SyntaxWarning: invalid escape sequence '\\%'\n",
+      "  df['Asistencia'] = df['Asistencia'].replace(\"[\\%]\", \"\", regex=True).astype(int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estudiante</th>\n",
+       "      <th>Materia</th>\n",
+       "      <th>Parcial 1</th>\n",
+       "      <th>Parcial 2</th>\n",
+       "      <th>Final</th>\n",
+       "      <th>Asistencia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ana pérez</td>\n",
+       "      <td>matematicas</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>carlos lópez</td>\n",
+       "      <td>fisica</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>maría gómez</td>\n",
+       "      <td>quimica</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pedro rodríguez</td>\n",
+       "      <td>historia</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>laura vargas</td>\n",
+       "      <td>matematicas</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        estudiante      Materia  Parcial 1  Parcial 2  Final  Asistencia\n",
+       "0        ana pérez  matematicas        8.0        7.5    9.0          95\n",
+       "1     carlos lópez       fisica        6.2        7.0    0.0          88\n",
+       "2      maría gómez      quimica        9.0        8.8    9.5         100\n",
+       "3  pedro rodríguez     historia        7.5        6.0    7.0          75\n",
+       "4     laura vargas  matematicas        0.0        9.2    8.5          92"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Asistencia'] = df['Asistencia'].replace(\"[\\%]\", \"\", regex=True).astype(int)\n",
+    "df.loc[df['Asistencia'] > 100, 'Asistencia'] = 100\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2824abc",
+   "metadata": {},
+   "source": [
+    "#### Normalizacion de texto\n",
+    "Se normalizan las columnas `estudiante` y `Materia` dandoles un formato de titulo (mayuscula en la primera letra de cada palabra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0b0edac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estudiante</th>\n",
+       "      <th>Materia</th>\n",
+       "      <th>Parcial 1</th>\n",
+       "      <th>Parcial 2</th>\n",
+       "      <th>Final</th>\n",
+       "      <th>Asistencia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana Pérez</td>\n",
+       "      <td>Matematicas</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carlos López</td>\n",
+       "      <td>Fisica</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>María Gómez</td>\n",
+       "      <td>Quimica</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro Rodríguez</td>\n",
+       "      <td>Historia</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Laura Vargas</td>\n",
+       "      <td>Matematicas</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Javier Soto</td>\n",
+       "      <td>Fisica</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sofia Díaz</td>\n",
+       "      <td>Ciencias Sociales</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Miguel Fernández</td>\n",
+       "      <td>Literatura Universal</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Valentina Ruiz</td>\n",
+       "      <td>Matematicas</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Diego Castro</td>\n",
+       "      <td>Fisica</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         estudiante               Materia  Parcial 1  Parcial 2  Final  \\\n",
+       "0         Ana Pérez           Matematicas        8.0        7.5    9.0   \n",
+       "1      Carlos López                Fisica        6.2        7.0    0.0   \n",
+       "2       María Gómez               Quimica        9.0        8.8    9.5   \n",
+       "3   Pedro Rodríguez              Historia        7.5        6.0    7.0   \n",
+       "4      Laura Vargas           Matematicas        0.0        9.2    8.5   \n",
+       "5       Javier Soto                Fisica        5.8        6.5    6.0   \n",
+       "6        Sofia Díaz     Ciencias Sociales        9.5        9.1    0.0   \n",
+       "7  Miguel Fernández  Literatura Universal        8.0        7.8    8.2   \n",
+       "8    Valentina Ruiz           Matematicas        7.0        0.0    7.8   \n",
+       "9      Diego Castro                Fisica        6.8        7.2    7.5   \n",
+       "\n",
+       "   Asistencia  \n",
+       "0          95  \n",
+       "1          88  \n",
+       "2         100  \n",
+       "3          75  \n",
+       "4          92  \n",
+       "5          80  \n",
+       "6          98  \n",
+       "7          85  \n",
+       "8          90  \n",
+       "9          93  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Materia'] = df['Materia'].str.title()\n",
+    "df['estudiante'] = df['estudiante'].str.title()\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6225cb9",
+   "metadata": {},
+   "source": [
+    "#### Calcular numeros estadisticos finales\n",
+    "Con la limpieza y normalizacion ya hechos ahora podemos ver las estadisticas con mas claridad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "65807eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parcial 1</th>\n",
+       "      <th>Parcial 2</th>\n",
+       "      <th>Final</th>\n",
+       "      <th>Asistencia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>100.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.89200</td>\n",
+       "      <td>6.891000</td>\n",
+       "      <td>6.710000</td>\n",
+       "      <td>88.180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.79804</td>\n",
+       "      <td>2.787566</td>\n",
+       "      <td>3.043075</td>\n",
+       "      <td>8.445165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.37500</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>6.375000</td>\n",
+       "      <td>81.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7.60000</td>\n",
+       "      <td>7.500000</td>\n",
+       "      <td>7.450000</td>\n",
+       "      <td>88.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.80000</td>\n",
+       "      <td>8.800000</td>\n",
+       "      <td>8.825000</td>\n",
+       "      <td>96.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>9.90000</td>\n",
+       "      <td>9.900000</td>\n",
+       "      <td>9.900000</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Parcial 1   Parcial 2       Final  Asistencia\n",
+       "count  100.00000  100.000000  100.000000  100.000000\n",
+       "mean     6.89200    6.891000    6.710000   88.180000\n",
+       "std      2.79804    2.787566    3.043075    8.445165\n",
+       "min      0.00000    0.000000    0.000000   70.000000\n",
+       "25%      6.37500    6.500000    6.375000   81.750000\n",
+       "50%      7.60000    7.500000    7.450000   88.500000\n",
+       "75%      8.80000    8.800000    8.825000   96.000000\n",
+       "max      9.90000    9.900000    9.900000  100.000000"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
