feat: Guardar el dataframe a archivo sqlite

--- a/main.ipynb
+++ b/main.ipynb
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "687317cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
-    "import sqlite3 as sql\n"
+    "import sqlite3 \n"
    ]
   },
   {
@@ -1524,6 +1524,47 @@
     "plt.ylabel(\"Estudiante\")\n",
     "plt.grid(axis='x', linestyle='-')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b41445bb",
+   "metadata": {},
+   "source": [
+    "### Exportación a Archivo SQLite\n",
+    "Se utiliza la funcionalidad de Pandas para guardar el DataFrame procesado en una base de datos SQLite. Esto permite almacenar los datos de forma estructurada para su posterior consulta y uso."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "8a06fefd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('calificaciones.db')\n",
+    "df.to_sql('calificaciones', conn, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "d614e320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   }
  ],
